sql/sql_parse.cc
@@ -786,6 +786,7 @@ bool do_command(THD *thd)
     else if (thd->wsrep_conflict_state == ABORTED)
     {
       thd->store_globals();
+      thd->wsrep_bf_thd = NULL;
     }
 
     thd->wsrep_query_state= QUERY_EXEC;
@@ -1059,6 +1060,7 @@ bool dispatch_command(enum enum_server_command command, THD *thd,
       thd->mysys_var->abort     = 0;
       thd->wsrep_conflict_state = NO_CONFLICT;
       thd->wsrep_retry_counter  = 0;
+      thd->wsrep_bf_thd         = NULL;
       /*
         Increment threads running to compensate dec_thread_running() called
         after dispatch_end label.
@@ -6131,6 +6133,7 @@ static void wsrep_mysql_parse(THD *thd, char *rawbuf, uint length,
               my_error(ER_LOCK_DEADLOCK, MYF(0), "wsrep aborted transaction");
             }
             thd->wsrep_conflict_state= ABORTED;
+	    thd->wsrep_bf_thd        = NULL;
             wsrep->post_rollback(wsrep, &thd->wsrep_trx_handle);
             break;
           default:
@@ -7992,6 +7995,7 @@ static void wsrep_client_rollback(THD *thd)
   }
   mysql_mutex_lock(&thd->LOCK_wsrep_thd);
   thd->wsrep_conflict_state= ABORTED;
+  thd->wsrep_bf_thd = NULL;
 }
 
 static enum wsrep_status wsrep_apply_sql(
